--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,29 @@
 <ul>
   <li *ngFor="let food of foods">
-    <img src="{{ food }}" />
+    <a>
+      <img src="{{ food.imageUrl }}" />
+      <div class="content">
+        <div class="name">
+          {{ food.name }}
+        </div>
+        <span class="favorite {{ food.favorite ? '' : 'not' }}"> ❤ </span>
+        <div class="product-itemfooter">
+          <div class="origins">
+            <span *ngFor="let origin of food.origins">
+              {{ origin }}
+            </span>
+          </div>
+          <div class="cook-time">
+            <span>⏰</span>
+            {{ food.cookTime }}
+          </div>
+        </div>
+        <div class="price">
+          <span>
+            {{ food.price | currency }}
+          </span>
+        </div>
+      </div>
+    </a>
   </li>
 </ul>
