creating-not found-page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,15 @@
 <app-search></app-search>
+
 <app-tags></app-tags>
+
+<app-not-found
+  [visible]="!foods || foods.length <= 0"
+  resetLinkText="Reset Search"
+></app-not-found>
+
 <ul>
   <li *ngFor="let food of foods">
-    <a routerLink="/food/{{food.id}}">
+    <a routerLink="/food/{{ food.id }}">
       <img src="{{ food.imageUrl }}" />
       <div class="content">
         <div class="name">
